fix: adjust z-index of resizer

--- a/src/components/queue/Resizer.module.scss
+++ b/src/components/queue/Resizer.module.scss
@@ -2,6 +2,7 @@
   // @apply py-2 px-4 font-semibold rounded-lg shadow-md text-white bg-orange-500 hover:bg-orange-600;
   position: absolute;
   pointer-events: none;
+  z-index: 100;
 
   & > rect {
     pointer-events: all;
